--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>A Song Tetris Project</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Game Title</title>
     <style>
-        canvas { background: #000; display: block; margin: 0 auto; }
+        /* Basic styling */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        canvas {
+            border: 1px solid black;
+        }
     </style>
 </head>
+
 <body>
-    <canvas id="tetrisCanvas" width="200" height="400"></canvas>
+    <canvas id="gameCanvas" width="800" height="600" tabindex="0"></canvas>
     <script type="module" src="../static/js/tetris.js"></script>
 </body>
+
 </html>
