--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Title</title>
-    <style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+    <!-- <style>
         /* Basic styling */
         body {
             display: flex;
@@ -18,11 +19,37 @@
         canvas {
             border: 1px solid black;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
-    <canvas id="gameCanvas" width="800" height="600" tabindex="0"></canvas>
+
+    <div id="app">
+        <nav></nav>
+        <div id="background"></div>
+        <div id="main" tabindex="0">
+            <div id="lstage">
+                <canvas id="holdCanvas" width="100" height="100"></canvas>
+            </div>
+            <div id="stage">
+                <canvas id="bgCanvas" width="250" height="500"></canvas>
+                <canvas id="gameCanvas" width="250" height="500" ></canvas>
+            </div>
+            <div id="rstage">
+                <canvas id="queueCanvas" width="100" height="375"></canvas>
+            </div>
+            <div style="clear:both">
+                <div id="buttonsBox">
+                    <button id="settings">Settings</button>
+                    <button id="restart">Restart</button>
+                </div>
+                <div id="gameStats">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="../static/js/tetris.js"></script>
 </body>
 
