--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+
 #background {
     width: 100%;
     height: 100%;
@@ -7,55 +8,68 @@
     border: 0px;
     margin: 0px;
     z-index: -99;
-    background-color: gray;
+    background-color: rgb(0, 0, 0);
+}
+
+#app {
+    width: 100%;
+    height: 100%;
+    width: fit-content;
+    height: fit-content;
+    margin: auto;
 }
 
 #main {
     float: left;
     position: relative;
+    display: flex;
+    flex-direction: row;
+}
 
+#middlestage {
+    display: flex;
+    flex-direction: column;
+}
+
+.stage {
+    float: left;
+    position: relative;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #414141;
+    margin: 5px;
+    background-color: #000000;
 }
 
 #lstage {
-    float: left;
-    position: relative;
-    margin-right: 10px;
-    width: 100px;
-    height: 100px;
-    background-color: rgb(255, 255, 255);
+    width: 101px;
+    height: 101px;
 }
 
 #stage {
-    float: left;
-    position: relative;
-    width: 250px;
-    height: 500px;
-    background-color: #121212
+    width: 251px;
+    height: 501px;
 }
 
 #rstage {
-    margin-left: 10px;
-    float: left;
-    position: relative;
-    width: 100px;
-    height: 375px;
-    background-color: rgb(255, 255, 255);
+    width: 101px;
+    height: 376px;
 }
 
-#buttonsBox{
-    position: absolute;
+#bstage {
+    width: 251px;
+    height: 50px;
     display: flex;
-    width: 250px;
-    background-color: #121212;
-    margin-top: 25px;
-    margin-left: 110px;
     justify-content: center;
+    align-items: center;
 }
 
-#bgCanvas{
-    z-index: 1;
-}
-
-#mainCanvas{
+#bgCanvas {
+    position: absolute;
     z-index: 2;
+}
+
+#gameCanvas {
+    position: absolute;
+    z-index: 1;
 }
