--- a/templates/index.html
+++ b/templates/index.html
@@ -28,25 +28,29 @@
         <nav></nav>
         <div id="background"></div>
         <div id="main" tabindex="0">
-            <div id="lstage">
+            <div id="lstage" class="stage">
                 <canvas id="holdCanvas" width="100" height="100"></canvas>
             </div>
-            <div id="stage">
-                <canvas id="bgCanvas" width="250" height="500"></canvas>
-                <canvas id="gameCanvas" width="250" height="500" ></canvas>
+            <div id="middlestage">
+                <div id="stage" class="stage">
+                    <canvas id="bgCanvas" width="251" height="501"></canvas>
+                    <canvas id="gameCanvas" width="251" height="501"></canvas>
+                </div>
+                <div id="bstage" class="stage">
+                    <div id="buttonsBox">
+                        <button id="settings">Settings</button>
+                        <button id="restart">Restart</button>
+                    </div>
+                    <div id="gameStats">
+
+                    </div>
+                </div>
             </div>
-            <div id="rstage">
+
+            <div id="rstage" class="stage">
                 <canvas id="queueCanvas" width="100" height="375"></canvas>
             </div>
-            <div style="clear:both">
-                <div id="buttonsBox">
-                    <button id="settings">Settings</button>
-                    <button id="restart">Restart</button>
-                </div>
-                <div id="gameStats">
 
-                </div>
-            </div>
         </div>
     </div>
 
