--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,16 +19,24 @@
     margin: auto;
 }
 
-#main {
+/* #main {
+    
+} */
+
+.vertical-container{
+    float: left;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.horizontal-container{
     float: left;
     position: relative;
     display: flex;
     flex-direction: row;
-}
-
-#middlestage {
-    display: flex;
-    flex-direction: column;
 }
 
 .stage {
@@ -38,12 +46,27 @@
     border-width: 2px;
     border-color: #414141;
     margin: 5px;
+    /* margin-top: 0px; */
     background-color: #000000;
 }
 
+#upper-stage{
+    margin: 0;
+    border: 0;
+    
+}
+
+.textCanvas{
+    float: left;
+    position: relative;
+    margin: 7px;
+    margin-bottom: 0px;
+}
+
+
 #lstage {
     width: 101px;
-    height: 101px;
+    height: 76px;
 }
 
 #stage {
@@ -56,7 +79,7 @@
     height: 376px;
 }
 
-#bstage {
+#bottom-stage {
     width: 251px;
     height: 50px;
     display: flex;
@@ -64,12 +87,17 @@
     align-items: center;
 }
 
+#gameScore {
+    position: absolute;
+
+}
+
 #bgCanvas {
     position: absolute;
-    z-index: 2;
+    z-index: 1;
 }
 
 #gameCanvas {
     position: absolute;
-    z-index: 1;
+    z-index: 2;
 }
