--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-
 #background {
     width: 100%;
     height: 100%;
@@ -23,7 +22,7 @@
     
 } */
 
-.vertical-container{
+.vertical-container {
     float: left;
     position: relative;
     display: flex;
@@ -32,7 +31,7 @@
     align-items: center;
 }
 
-.horizontal-container{
+.horizontal-container {
     float: left;
     position: relative;
     display: flex;
@@ -50,17 +49,18 @@
     background-color: #000000;
 }
 
-#upper-stage{
+#upper-stage {
     margin: 0;
     border: 0;
-    
+
 }
 
-.textCanvas{
+.textCanvas {
     float: left;
     position: relative;
     margin: 7px;
     margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 
@@ -80,11 +80,17 @@
 }
 
 #bottom-stage {
-    width: 251px;
-    height: 50px;
+    width: fit-content;
+    height: fit-content;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#gameStats {
+    width: 251px;
+    height: 150px;
 }
 
 #gameScore {
