--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                         <button id="restart">Restart</button>
                     </div>
                     <div id="gameStats">
-
+                        <canvas id="gameStatsCanvas" width="251" height="150"></canvas>
                     </div>
                 </div>
             </div>
