--- a/templates/index.html
+++ b/templates/index.html
@@ -42,12 +42,12 @@
                 </div>
                 <div id="bottom-stage" class="stage">
                     <div id="buttonsBox">
-                        <button id="settings">Settings</button>
-                        <button id="restart">Restart</button>
+                        <button id="settingsButton">Settings</button>
+                        <button id="restartButton">Restart</button>
                     </div>
-                    <div id="gameStats">
+                    <!-- <div id="gameStats">
                         <canvas id="gameStatsCanvas" width="251" height="150"></canvas>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
