--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <script type="module" src="../static/js/tetris.js"></script>
+    <script type="module" src="../static/js/Tester.js"></script>
 </body>
 
 </html>
