--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                         <div id="stage" class="stage">
                             <!-- <canvas id="gameScore" width="251" height="40"></canvas> -->
                             <canvas id="bgCanvas" width="251" height="501"></canvas>
-                            <canvas id="gameCanvas" width="251" height="501"></canvas>
+                            <canvas id="gameCanvas" tabindex="0" width="251" height="501"></canvas>
                         </div>
 
                     </div>
