--- a/templates/test.html
+++ b/templates/test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Title</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="preload" href="static/fonts/Montserrat-Medium.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <!-- <link rel="preload" href="static/fonts/Montserrat-Medium.ttf" as="font" type="font/ttf" crossorigin="anonymous"> -->
 </head>
 
 <body>
@@ -15,16 +15,16 @@
         <div id="background"></div>
         <div id="main" class="game-container">
             <canvas id="game1" class="game-canvas" tabindex='0'></canvas>
-            <canvas id="game2" class="game-canvas" tabindex='0'></canvas>
-            <canvas id="game3" class="game-canvas" tabindex='0'></canvas>
+            <!-- <canvas id="game2" class="game-canvas" tabindex='0'></canvas> -->
+            <!-- <canvas id="game3" class="game-canvas" tabindex='0'></canvas> -->
 
         </div>
-        <script>
+        <!-- <script>
             const font = new FontFace('Montserrat-Medium', 'url(static/fonts/Montserrat-Medium.ttf)');
             font.load().then(function(loadedFont){
                 document.fonts.add(loadedFont);
             });
-        </script>
+        </script> -->
         <script type="module" src="../static/js/Tester.js"></script>
     </div>
 </body>
