--- a/templates/test.html
+++ b/templates/test.html
@@ -16,7 +16,7 @@
         <nav></nav>
         <div id="background"></div>
         <div id="main" class="game-container">
-            <canvas id="tetris-canvas" class="game-canvas" tabindex='0'></canvas>
+            <canvas id="tetris-canvas" class="game-canvas" tabindex='0' width="1435" height="1000"></canvas>
             <!-- <canvas id="game2" class="game-canvas" tabindex='0'></canvas> -->
             <!-- <canvas id="game3" class="game-canvas" tabindex='0'></canvas> -->
 
